feat: support jxbrowser for version 6.24.3